[gd_scene load_steps=18 format=4 uid="uid://w0cgb7l34gop"]

[ext_resource type="Script" path="res://Scripts/end_screen.gd" id="1_dqpeu"]
[ext_resource type="Texture2D" uid="uid://dfgf6nk12ivye" path="res://Sprites/Tileset 64x64.png" id="4_d7gnh"]
[ext_resource type="FontFile" uid="uid://odu0arfkvu4s" path="res://Fonts/PressStart2P-Regular.ttf" id="5_7mmtl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_28oah"]
texture = ExtResource("4_d7gnh")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
1:0/0 = 0
1:0/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
2:0/0 = 0
2:0/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
3:0/0 = 0
3:0/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
0:1/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
1:1/0 = 0
1:1/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
2:1/0 = 0
2:1/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
3:1/0 = 0
3:1/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
1:2/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
2:2/0 = 0
2:2/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/modulate = Color(0.277528, 0.277528, 0.277528, 1)
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_g5cmm"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_28oah")

[sub_resource type="LabelSettings" id="LabelSettings_ocu5h"]
font = ExtResource("5_7mmtl")
font_size = 54
shadow_size = 7
shadow_color = Color(0.472007, 0.000176495, 0.479639, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssq32"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_isv02"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyihj"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_orvyo"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06fo5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_igsf2"]
default_font = ExtResource("5_7mmtl")
default_font_size = 20
Button/colors/font_color = Color(0.858824, 0.87451, 0.87451, 1)
Button/colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 1)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(0, 0, 0, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/styles/disabled = SubResource("StyleBoxFlat_ssq32")
Button/styles/focus = SubResource("StyleBoxFlat_isv02")
Button/styles/hover = SubResource("StyleBoxFlat_nyihj")
Button/styles/normal = SubResource("StyleBoxFlat_orvyo")
Button/styles/pressed = SubResource("StyleBoxFlat_06fo5")

[sub_resource type="LabelSettings" id="LabelSettings_qd5fd"]
font = ExtResource("5_7mmtl")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_vw2c5"]
font = ExtResource("5_7mmtl")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_b70uh"]
font = ExtResource("5_7mmtl")
font_color = Color(0.628466, 0.628466, 0, 1)

[sub_resource type="Theme" id="Theme_c2dno"]
default_font = ExtResource("5_7mmtl")

[sub_resource type="Theme" id="Theme_kcfon"]
default_font = ExtResource("5_7mmtl")

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_dqpeu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileMapLayer" type="TileMapLayer" parent="CanvasLayer/TitleScreen"]
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AAAAAAAAAAABAAEAAAABAAAAAAABAAAAAAACAAAAAAAAAAAAAAADAAAAAAACAAAAAAAEAAAAAAACAAEAAAAFAAAAAAACAAAAAAAGAAAAAAACAAEAAAAHAAAAAAABAAAAAAAIAAAAAAACAAEAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAADAAAAAAAMAAAAAAACAAAAAAANAAAAAAACAAEAAAAOAAAAAAACAAEAAAAPAAAAAAABAAEAAAAQAAAAAAAAAAAAAAARAAAAAAACAAAAAAARAAEAAAACAAAAAAAQAAEAAAACAAAAAAAPAAEAAAADAAAAAAAOAAEAAAADAAAAAAANAAEAAAABAAAAAAAMAAEAAAAAAAAAAAALAAEAAAABAAEAAAAKAAEAAAAAAAEAAAAJAAEAAAABAAEAAAAIAAEAAAABAAEAAAAHAAEAAAACAAAAAAAGAAEAAAABAAAAAAAFAAEAAAABAAEAAAAEAAEAAAABAAEAAAADAAEAAAABAAAAAAACAAEAAAAAAAAAAAABAAEAAAABAAAAAAAAAAEAAAAAAAEAAAAAAAIAAAADAAAAAAABAAIAAAACAAAAAAACAAIAAAABAAEAAAADAAIAAAAAAAEAAAAEAAIAAAADAAAAAAAFAAIAAAAAAAEAAAAGAAIAAAACAAAAAAAHAAIAAAACAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAACAAEAAAAKAAIAAAACAAAAAAALAAIAAAABAAEAAAAMAAIAAAABAAEAAAANAAIAAAABAAEAAAAOAAIAAAAAAAEAAAAPAAIAAAABAAEAAAAQAAIAAAAAAAEAAAARAAIAAAAAAAAAAAARAAMAAAABAAEAAAAQAAMAAAAAAAAAAAAPAAMAAAACAAEAAAAOAAMAAAAAAAAAAAANAAMAAAAAAAEAAAAMAAMAAAACAAAAAAALAAMAAAACAAEAAAAKAAMAAAACAAAAAAAJAAMAAAACAAEAAAAIAAMAAAADAAAAAAAHAAMAAAAAAAAAAAAGAAMAAAACAAAAAAAFAAMAAAAAAAEAAAAEAAMAAAAAAAEAAAADAAMAAAAAAAAAAAACAAMAAAACAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAABAAAAAAABAAQAAAACAAEAAAACAAQAAAACAAAAAAADAAQAAAADAAAAAAAEAAQAAAAAAAEAAAAFAAQAAAACAAIAAAAGAAQAAAAAAAEAAAAHAAQAAAAAAAEAAAAIAAQAAAAAAAEAAAAJAAQAAAADAAAAAAAKAAQAAAACAAAAAAALAAQAAAABAAAAAAAMAAQAAAAAAAAAAAANAAQAAAACAAIAAAAOAAQAAAAAAAAAAAAPAAQAAAABAAEAAAAQAAQAAAAAAAEAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAAQAAUAAAACAAAAAAAPAAUAAAAAAAEAAAAOAAUAAAABAAEAAAANAAUAAAACAAMAAAAMAAUAAAABAAAAAAALAAUAAAABAAEAAAAKAAUAAAACAAAAAAAJAAUAAAACAAAAAAAIAAUAAAADAAAAAAAHAAUAAAABAAEAAAAGAAUAAAACAAAAAAAFAAUAAAACAAMAAAAEAAUAAAAAAAAAAAADAAUAAAABAAEAAAACAAUAAAABAAEAAAABAAUAAAACAAAAAAABAAYAAAABAAAAAAAAAAYAAAACAAAAAAAAAAUAAAADAAAAAAAAAAcAAAAAAAEAAAAAAAgAAAACAAEAAAAAAAkAAAACAAEAAAABAAgAAAADAAAAAAABAAcAAAAAAAAAAAABAAkAAAACAAAAAAACAAkAAAAAAAAAAAADAAkAAAABAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAEAAAAGAAkAAAADAAAAAAAHAAkAAAACAAEAAAAIAAkAAAAAAAEAAAAJAAkAAAACAAAAAAAKAAkAAAACAAEAAAALAAkAAAACAAEAAAAMAAkAAAADAAAAAAANAAkAAAADAAAAAAAOAAkAAAACAAAAAAAPAAkAAAABAAEAAAAQAAkAAAACAAEAAAARAAkAAAACAAEAAAARAAgAAAAAAAEAAAARAAcAAAABAAAAAAARAAYAAAABAAAAAAAQAAYAAAAAAAAAAAAPAAYAAAABAAAAAAAOAAYAAAADAAAAAAANAAYAAAABAAEAAAAMAAYAAAAAAAEAAAALAAYAAAAAAAEAAAAKAAYAAAADAAAAAAAJAAYAAAADAAAAAAAIAAYAAAACAAAAAAAHAAYAAAACAAEAAAAGAAYAAAABAAAAAAAFAAYAAAABAAEAAAAEAAYAAAADAAAAAAADAAYAAAABAAAAAAACAAYAAAAAAAAAAAACAAcAAAABAAEAAAACAAgAAAABAAAAAAADAAgAAAABAAAAAAAEAAgAAAACAAEAAAAEAAcAAAACAAAAAAAFAAcAAAACAAEAAAAGAAcAAAAAAAEAAAAHAAcAAAAAAAEAAAAHAAgAAAADAAAAAAAGAAgAAAADAAAAAAAFAAgAAAACAAAAAAADAAcAAAACAAEAAAAIAAcAAAACAAAAAAAJAAcAAAADAAAAAAAKAAcAAAAAAAEAAAALAAcAAAAAAAEAAAAJAAgAAAACAAEAAAAIAAgAAAACAAEAAAAKAAgAAAABAAAAAAALAAgAAAAAAAAAAAAMAAgAAAACAAEAAAANAAgAAAACAAAAAAAOAAcAAAABAAEAAAAPAAcAAAACAAEAAAAPAAgAAAAAAAAAAAAOAAgAAAACAAEAAAAMAAcAAAACAAEAAAANAAcAAAAAAAEAAAAQAAcAAAABAAEAAAAQAAgAAAAAAAAAAAARAAoAAAACAAEAAAAQAAoAAAABAAEAAAAPAAoAAAADAAAAAAAOAAoAAAAAAAEAAAANAAoAAAACAAEAAAAMAAoAAAAAAAAAAAALAAoAAAABAAEAAAAKAAoAAAACAAEAAAAJAAoAAAADAAAAAAAIAAoAAAACAAAAAAAHAAoAAAACAAAAAAAGAAoAAAAAAAEAAAAFAAoAAAACAAAAAAAEAAoAAAADAAAAAAADAAoAAAABAAEAAAACAAoAAAABAAAAAAABAAoAAAABAAEAAAAAAAoAAAADAAAAAAD//woAAAABAAEAAAD//wkAAAAAAAEAAAD//wgAAAACAAAAAAD//wcAAAACAAEAAAD//wYAAAABAAAAAAD//wUAAAADAAAAAAD//wQAAAACAAAAAAD//wMAAAACAAEAAAD//wIAAAABAAEAAAD//wEAAAADAAAAAAD//wAAAAACAAEAAAD/////AAACAAEAAAAAAP//AAACAAAAAAABAP//AAABAAAAAAACAP//AAAAAAEAAAADAP//AAADAAAAAAAEAP//AAAAAAEAAAAFAP//AAABAAEAAAAGAP//AAABAAAAAAAHAP//AAACAAEAAAAIAP//AAADAAAAAAAJAP//AAACAAAAAAAKAP//AAADAAAAAAALAP//AAACAAAAAAAMAP//AAABAAAAAAANAP//AAACAAAAAAAOAP//AAABAAAAAAAPAP//AAACAAAAAAAQAP//AAAAAAEAAAARAP//AAACAAAAAAASAP//AAAAAAAAAAASAAAAAAACAAAAAAASAAEAAAABAAEAAAASAAIAAAAAAAAAAAASAAMAAAABAAEAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAEAAAASAAcAAAACAAAAAAASAAgAAAABAAEAAAASAAkAAAAAAAEAAAASAAoAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_g5cmm")

[node name="Label" type="Label" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -456.0
offset_top = 193.0
offset_right = 462.0
offset_bottom = 247.0
grow_horizontal = 2
text = "YOU'VE ESCAPED!"
label_settings = SubResource("LabelSettings_ocu5h")
horizontal_alignment = 1

[node name="Play" type="Button" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -138.0
offset_right = -44.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_igsf2")
text = "Retry"

[node name="Your Time" type="HBoxContainer" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = 15.0
offset_right = 336.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="HighScore" type="Label" parent="CanvasLayer/TitleScreen/Your Time"]
layout_mode = 2
text = "Your Time: "
label_settings = SubResource("LabelSettings_qd5fd")

[node name="Timer" type="Label" parent="CanvasLayer/TitleScreen/Your Time"]
z_index = 101
layout_mode = 2
text = "00:00:000"
label_settings = SubResource("LabelSettings_vw2c5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewHighScore" type="Label" parent="CanvasLayer/TitleScreen/Your Time/Timer"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.5
offset_top = 5.0
offset_right = 208.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 0
text = "New High Score!"
label_settings = SubResource("LabelSettings_b70uh")
uppercase = true

[node name="Leaderboard" type="Button" parent="CanvasLayer/TitleScreen"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1106.0
offset_top = -138.0
offset_right = -858.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_igsf2")
text = "Leaderboard"

[node name="Leaderboard User" type="HBoxContainer" parent="CanvasLayer/TitleScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/TitleScreen/Leaderboard User"]
layout_mode = 2
theme = SubResource("Theme_c2dno")
placeholder_text = "NICKNAME"
max_length = 8
expand_to_text_length = true

[node name="Button" type="Button" parent="CanvasLayer/TitleScreen/Leaderboard User"]
layout_mode = 2
theme = SubResource("Theme_kcfon")
text = "Submit Time"

[node name="system_input" type="Label" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = 47.0
offset_right = 116.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="CanvasLayer/TitleScreen/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/TitleScreen/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="CanvasLayer/TitleScreen/Leaderboard User/Button" to="." method="_on_button_pressed"]
